# cpptemplate

./: CMakeLists.txt  README.md  main.cpp
.hooks/: pre-commit
lib/include/: hello.h
lib/src/: hello.cpp
lib/tests/: test_hello.cpp
